--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
+    "inngest": "^3.32.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.4",
-    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-top-loading-bar": "^3.0.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
