--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
     "@clerk/themes": "^2.2.20",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -30,7 +31,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-nprogress-bar": "^2.4.7",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
