--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "15.1.7",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
@@ -40,6 +41,7 @@
     "react-spinners": "^0.15.0",
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.1",
+    "resend": "^4.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
