--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html2pdf.js": "^0.10.3",
     "inngest": "^3.32.7",
     "lucide-react": "^0.475.0",
+    "marked": "^15.0.11",
     "next": "15.1.7",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
