--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
     "@clerk/themes": "^2.2.20",
-    "@google/generative-ai": "^0.24.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/google-genai": "^1.0.3",
+    "@pinecone-database/pinecone": "^6.1.3",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -29,15 +31,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.5.0",
     "html2pdf.js": "^0.10.3",
     "inngest": "^3.32.7",
+    "langchain": "^1.0.6",
     "lucide-react": "^0.475.0",
     "marked": "^15.0.11",
     "next": "15.1.7",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
+    "pinecone": "^0.1.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
